test/ImportResolution/import-resolution-2.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend -emit-module -o %t %S/Inputs/abcde.code
// RUN: %target-language-frontend -emit-module -o %t %S/Inputs/aeiou.code
// RUN: %target-language-frontend -emit-module -o %t %S/Inputs/asdf.code
// RUN: %target-language-frontend -emit-module -o %t -I %t %S/Inputs/letters.code
// RUN: %target-language-frontend -typecheck %s -I %t -sdk "" -verify

import letters
import aeiou
import struct asdf.A
import struct abcde.A

var uA : A // expected-error {{'A' is ambiguous for type lookup in this context}}
var uB : B = abcde.B()
var uC : C = letters.C(b: uB)
var uD : D = asdf.D()
var uE : E = aeiou.E()
var uF : F = letters.F()

var qA1 : aeiou.A
var qA2 : asdf.A
var qA3 : abcde.A

var uS : S // expected-error {{cannot find type 'S' in scope}}
var qS1 : letters.S // expected-error {{no type named 'S' in module 'letters'}}
var qS2 : asdf.S // expected-error {{no type named 'S' in module 'asdf'}}
// but...!
letters.consumeS(letters.myS)
